--- a/example-page.html
+++ b/example-page.html
@@ -3,6 +3,7 @@ layout: default
 title: Example Page
 class: example-page
 nav-order: 2
+meta-description: Accusamus ab expedita in impedit pariatur molestiae eveniet adipisci obcaecati autem explicabo, laudantium dolor amet, commodi officia enim tempora illum dolorem. Culpa.
 ---
 
 <section class="section--fixed-bg intro">
