--- a/example-page.html
+++ b/example-page.html
@@ -6,7 +6,7 @@ nav-order: 2
 meta-description: Accusamus ab expedita in impedit pariatur molestiae eveniet adipisci obcaecati autem explicabo, laudantium dolor amet, commodi officia enim tempora illum dolorem. Culpa.
 ---
 
-<section class="section--fixed-bg intro">
+<section class="section--fixed-bg intro site-header__offset">
   <div class="row row--padding">
     <h1>{{ page.title }}</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam!</p>
