--- a/offers.html
+++ b/offers.html
@@ -5,7 +5,7 @@ class: offers
 nav-order: 3
 ---
 
-<section class="section--fixed-bg intro">
+<section class="section--fixed-bg intro site-header__offset">
   <div class="row row--padding">
     <h1>{{ page.title }}</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis dolorum ad quasi itaque assumenda cum eos voluptatibus quidem labore hic, quisquam aliquam architecto explicabo tenetur officiis, laborum quas laudantium aspernatur!</p>
