--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ class: overview
 nav-order: 1
 ---
 
-<section class="section--fixed-bg intro">
+<section class="section--fixed-bg intro site-header__offset">
   <div class="row row--padding">
     <h1>{{ page.title }}</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam!</p>
