--- a/example-page.html
+++ b/example-page.html
@@ -9,8 +9,8 @@ meta-description: Accusamus ab expedita in impedit pariatur molestiae eveniet ad
 <section class="section--fixed-bg intro site-header__offset">
   <div class="row row--padding">
     <h1>{{ page.title }}</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam!</p>
-    <a href="offers.html" class="btn">Offers</a>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae harum quasi magni veniam eos laborum velit, provident laboriosam, distinctio laudantium voluptas natus sapiente nobis, amet. Maiores, quo eum iste quisquam!</p>
+    <a href="#" class="js-open-modal btn">Launch modal</a>
   </div>
 </section>
 
@@ -34,3 +34,5 @@ meta-description: Accusamus ab expedita in impedit pariatur molestiae eveniet ad
     </div>
   </div>
 </section>
+
+{% include example-modal.html %}
