--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ intro: >
 </div>
 
 <div class="section offers row">
-  <h3 class="row offers__message">Book and save up to 30% on our hand-picked collection of South Africa escapes</h3>
+  <div class="row intro">
+    <img class="js-svg-swap logo logo--stylist stamp-effect" src="{{site.baseurl}}/img/logo/stylist-stamp.png" alt="Stylist Logo">
+    <h2 class="intro__subtitle">Travel Offers</h2>
+    <p class="intro__description">Book and save up to 30% on our hand-picked collection of South Africa escapes</p>
+  </div>
   <div class="row">
     {% include offers.html %}
   </div>
