new content structure

--- a/offers/index.html
+++ b/offers/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Travel Offers
-class: travel-offers
-nav-order: 7
+title: Offers
+class: offers
+nav-order: 6
 intro: >
   South Africa is often described as an entire world in one country, and with so many incredible experiences to be had this year, now is the time to visit. Browse our offers on regional tours and sumptuous stays at top-end hotels.
 ---
