--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@ intro: >
 </div>
 
 <div class="section row">
-  <div class="video js-youtube-thumbnail" data-thumbnail-img="img/content/overview/video.jpg">
+  <div class="row">
+    <h2>What Would You Do In South Africa</h2>
+    <p>Complete this and get extra recommendations &amp; get £50 off the trip</p>
+    <a href="{{site.baseurl}}/game" class="btn">Start Now</a>
+  </div>
+  <div class="row video js-youtube-thumbnail" data-thumbnail-img="img/content/overview/video.jpg">
     <iframe class="video__iframe" src='https://www.youtube.com/embed/jeBbQABLRC0?rel=0&amp;showinfo=0' frameborder='0'></iframe>
   </div>
   <div class="home__page row--padding">
