--- a/competition/index.html
+++ b/competition/index.html
@@ -5,7 +5,7 @@ class: competition
 nav-order: 8
 
 intro: >
-  Enter here for the chance to win a once in a lifetime holiday to this dynamic land, courtesy of Premier&nbsp;Holidays
+  Enter here for the chance to win a once-in-a-lifetime holiday to this dynamic land, courtesy of Premier&nbsp;Holidays
 ---
 
 <section class="row section">
