--- a/experts/index.html
+++ b/experts/index.html
@@ -186,7 +186,7 @@ intro: >
         <div class="row__column">
           <h3 class="title title--medium title--lower title--light">Christy-Anne</h3>
           <h4 class="title title--sub-heading title--tiny title--bolder title--expanded">Jeweller &amp; Food Lover</h4>
-          <p>Christy-Anne runs a successful jewellery business with a focus on contemporary, fashion forward design</p>
+          <p>Christy-Anne runs a successful jewellery business with a focus on contemporary, fashion-forward design</p>
           <a class="btn js-expand-interview-toggle" href="#">Read Interview</a>
         </div>
       </div>
