--- a/nature/index.html
+++ b/nature/index.html
@@ -83,7 +83,7 @@ subjects:
       <div class="row row--columns-5-7-gutters row--columns-vertical-align">
         <div class="row__column">
           <h3 class="title title--lower title--medium">The Big Five</h3>
-          <p>The Big Five has become a moniker synonymous with the safari. It actually originated among hunters, as a catch all term to describe the most difficult animals to track and hunt on foot. A rather morbid beginning for a term that now celebrates witnessing these majestic animals in their natural habitat.</p>
+          <p>The Big Five has become a moniker synonymous with the safari. It actually originated among hunters, as a catch-all term to describe the most difficult animals to track and hunt on foot. A rather morbid beginning for a term that now celebrates witnessing these majestic animals in their natural habitat.</p>
         </div>
         <div class="row__column">
           <div class="my-slider">
