--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ intro: >
 
 <section class="row section">
   <div class="video js-youtube-thumbnail" data-thumbnail-img="img/content/overview/video.jpg">
-    <iframe class="video__iframe" src='https://www.youtube.com/embed/sQ7X0dZe2Nc?rel=0&amp;showinfo=0' frameborder='0'></iframe>
+    <iframe class="video__iframe" src='https://www.youtube.com/embed/Epwoqj0qyac?rel=0&amp;showinfo=0' frameborder='0' allowfullscreen="allowfullscreen"></iframe>
   </div>
   <div class="inner-section inner-section--light">
     <p>South Africa is a land which encompasses so many different landscapes makes for a photographer’s dream, a thrill seeker’s heaven, a traveller’s elysian fields. With the Atlantic feverishly bubbling to one side, and the Indian Ocean offering warm dips and beach bliss, South Africa is a country rife with a dynamic juxtaposition of landscapes and lifestyles, making for truly immersive experiences. Be it catching up with the Big Five in the savannah, or hanging out with the cool cats of Maboneng, Jo’burg, South Africa never fails to deliver something for everyone – creating itineraries the size of novels.</p>
