autoplay feature video with query string option & anchor

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ intro: >
   </div>
 </section>
 
-<section class="row section">
-  <div class="video js-youtube-thumbnail" data-thumbnail-img="img/content/overview/video.jpg">
+<section class="row section" id="feature-video">
+  <div class="video js-youtube-thumbnail js-autoplay" data-thumbnail-img="img/content/overview/video.jpg">
     <iframe class="video__iframe" src='https://www.youtube.com/embed/Epwoqj0qyac?rel=0&amp;showinfo=0' frameborder='0' allowfullscreen="allowfullscreen"></iframe>
   </div>
   <div class="inner-section inner-section--light">
