add SA Airways logo to offers page

--- a/offers/index.html
+++ b/offers/index.html
@@ -10,7 +10,12 @@ intro: >
 <section class="row">
   <div class="page__intro">
     <h1 class="title title--largest title--bolder title--tighter title--condense">{{page.title}}</h1>
-    <p class="paragraph paragraph--lead page__intro--text-shadow">{{page.intro}}</p>
+    <p class="paragraph paragraph--lead page__intro--text-shadow">
+      {{page.intro}}
+    </p>
+    <div class="page__intro-logo">
+      <a class="logo logo--south-african-airways" href="https://www.flysaa.com/jo/en/"><img class="js-svg-swap" src="{{ site.baseurl }}/img/logo/south-african-airways-white.png" alt="South African Airways Logo"></a>
+    </div>
   </div>
 </section>
 
