--- a/experts/index.html
+++ b/experts/index.html
@@ -2,16 +2,17 @@
 layout: default
 title: Experts
 class: experts
-nav-order: 7
+nav-order: 6
 
 intro: >
-  We’ve brought together a range of South African locals, from an Olympic athlete to a musician, to offer you insider knowledge on this fascinating land.
+  We’ve brought together a range of South African locals, from an Olympic athlete to a musician, to offer you expert knowledge on this fascinating land.
 
 ---
 
 <section class="row section">
   <div class="page__intro">
-    <h1 class="title title--largest title--bolder title--tighter title--condense">Insider Know&shy;ledge</h1>
+    <h1 class="title title--largest title--bolder title--tighter title--condense">Expert Know&shy;ledge</h1>
+    {% include logo-credit.html %}
     <p class="paragraph paragraph--lead page__intro--text-shadow">{{page.intro}}</p>
   </div>
 </section>
