value game with final content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ intro: >
 </section>
 
 <section class="row section">
-  
+  {% include game-promo.html %}
 </section>
 
 <section class="row offers section">
