--- a/_pages/index.html
+++ b/_pages/index.html
@@ -14,6 +14,18 @@ intro: >
   </div>
 </section>
 
+
+
+<section class="row section">
+  <div class="roadtrips">
+    <h3 class="title title--smaller title--bold">Get on the road, and discover the real South Africa</h3>
+    <p class="paragraph--lead text--bold">Our team are currently road trippin' across the spellbinding landscapes of South Africa. Discover their story soon. Don't miss the launch!</p>
+    <div class="js-countdown countdown row--xl" data-date="2018/03/01"></div>
+  </div>
+</section>
+
+
+
 <section class="row section" id="feature-video">
   <div class="video js-youtube-thumbnail js-autoplay" data-thumbnail-img="img/content/overview/video.jpg">
     <iframe class="video__iframe" src='https://www.youtube.com/embed/Epwoqj0qyac?rel=0&amp;showinfo=0' frameborder='0' allowfullscreen="allowfullscreen"></iframe>
