--- a/_pages/offers/index.html
+++ b/_pages/offers/index.html
@@ -11,17 +11,16 @@ banner:
     <p class="text--xl">South Africa is often described as an entire world in one country, and with so many incredible experiences to be had this year, now is the time to visit. Browse our offers on regional tours and sumptuous stays at top-end hotels.</p>
 
 
+
 ---
 
 
 
-<div class="row vpad--lg">
-  {% include components/offers.html %}
+<div class="section">
+  <div class="row row--padding vpad--lg">
+    {% include components/offers.html %}
+  </div>
 </div>
 
-
-
-
 {% include components/offer-promo.html %}
-
 
