--- a/_pages/roadtrip/big-one/index.html
+++ b/_pages/roadtrip/big-one/index.html
@@ -1,5 +1,5 @@
 ---
-layout: article
+layout: roadtrip
 id: big-one
 title: The Big One
 group: roadtrip
@@ -10,6 +10,40 @@ group-order: 1
 banner:
   title: The Big One
   intro:
+
+
+
+meta:
+  journey: Johannesburg to Durbin
+  distance: 500 miles
+  time: 2 days
+
+
+
+roadtrip:
+  - title: The Big One
+    subtitle: Johannesburg to Durban
+    highlights:
+
+      - title: Highlight Heading
+        id: highlight-1
+        content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+
+      - title: Highlight Heading
+        id: highlight-2
+        content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+
+      - title: Highlight Heading
+        id: highlight-3
+        content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+
+      - title: Highlight Heading
+        id: highlight-4
+        content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+
+      - title: Highlight Heading
+        id: highlight-5
+        content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
 
 
 
