--- a/_pages/explore/index.html
+++ b/_pages/explore/index.html
@@ -3,26 +3,37 @@ layout: standard
 id: explore
 title: Explore
 nav-order: 3
-group: explore
+group-id: explore
+
+
+banner:
+  title: Explore
+  intro: >
+    <p class="text--xl">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+
+
 ---
 
 
 
 {% assign group-pages = site.html_pages | sort:"group-order" %}
-
-<div class="row row--6-6-gutters">
-  {% for page in group-pages %}
-    {% if page.group-order %}
-    <div class="col vpad-bottom--lg">
-      <a class="bg-img bg-img--4-3 bg-img--rounded bg-img--shadow bg--grey-darkest" href="{{page.url}}">
-        <div class="bg-img__content text--center text--white">
-          <span class="title title--lg title--bold title--upper">{{page.title}}</span>
+<div class="section">
+  <div class="row row--padding vpad-bottom--xl">
+    {% for group-page in group-pages %}
+      {% if group-page.group == page.group-id %}
+      <div class="bob{% cycle ""," bob--swap" %}">
+        <a class="bob__image" href="{{group-page.url}}">
+          <div class="bg-img bg-img--4-3 bg-img--rounded bg-img--shadow bg--grey-darkest" style="background-image: url({{site.baseurl}}/img/bg/{{group-page.id}}.jpg)"></div>
+        </a>
+        <div class="bob__text text--white">
+          <span class="title title--xl title--bold">{{group-page.banner.title}}</span>
+          <p class="text--xl">{{group-page.banner.intro|strip_html}}</p>
+          <a href="{{group-page.url}}" class="btn btn--solid">Read more</a>
         </div>
-        <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/bg/{{page.id}}-nav.jpg)"></div>
-      </a>
-    </div>
-    {% endif %}
-  {% endfor %}
+      </div>
+      {% endif %}
+    {% endfor %}
+  </div>
 </div>
 
 
