roadtrip page development

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -58,27 +58,7 @@ banner:
 
 
 
-<div class="section">
-  {% assign guides = site.html_pages | where:"group","explore" %}
-  <div class="row row--padding text--white text--center">
-    <h3 class="title title--xl title--bold">Learn more about South Africa</h3>
-  </div>
-
-  <div class="row row--padding row--3-3-3-3-gutters">
-    {% for guide in guides %}
-      <div class="col">
-        <a href="{{site.baseurl}}{{guide.url}}" class="bg-img bg-img--3-4 bg-img--rounded bg-img--shadow bg-img--hover bg--grey-darkest">
-          <div class="bg-img__content text--white text--center">
-            <span class="title title--sm title--bold">{{guide.title}}</span>
-            <p>{{guide.banner.intro|strip_html|truncatewords:12}}</p>
-            <span class="btn btn--sm btn--solid">Read more</span>
-          </div>
-          <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/bg/{{guide.id}}-nav.jpg);"></div>
-        </a>
-      </div>
-    {% endfor %}
-  </div>
-</div>
+{% include page/explore-links.html %}
 
 
 
