roadtrip design dev

--- a/_pages/roadtrip/big-one/index.html
+++ b/_pages/roadtrip/big-one/index.html
@@ -27,6 +27,7 @@ roadtrip:
 
     - title: Johannesburg
       id: johannesburg
+      drive-distance: 30 miles drive from Johannesburg
       highlights:
         - title: Liliesleaf Farm
         - title: Constitution Hill
@@ -39,6 +40,7 @@ roadtrip:
 
     - title: Isandlwana & Rorke’s Drift
       id: isandlwana
+      drive-distance: 30 miles drive from Isandlwana
       highlights:
         - title: Highlight 1
         - title: Highlight 2
@@ -50,6 +52,7 @@ roadtrip:
 
     - title: Hluhluwe
       id: hluhluwe
+      drive-distance: 30 miles drive from Hluhluwe
       highlights:
         - title: Highlight 1
         - title: Highlight 2
@@ -61,6 +64,7 @@ roadtrip:
 
     - title: St Lucia
       id: st-lucia
+      drive-distance: 30 miles drive from St Lucia
       highlights:
         - title: Highlight 1
         - title: Highlight 2
@@ -70,6 +74,7 @@ roadtrip:
 
     - title: Nelson Mandela Capture Site
       id: nelson-mandela
+      drive-distance: 30 miles drive from the Nelson Mandela Capture Site
       content: >
         <p>West of Durban lie the Midlands. Follow the R103 out of the city and discover the very spot where Nelson Mandela was captured by armed apartheid police, after 17 months on the run. This pivotal moment in the freedom struggle marked the beginning of Mandela’s lengthy imprisonment. The spot is recognized by a remarkable sculpture that signifies both Mandela’s disappearance and his return to the world.  </p>
 
