update roadtrips with real content and images where possible

--- a/_pages/roadtrip/panorama-route/index.html
+++ b/_pages/roadtrip/panorama-route/index.html
@@ -9,60 +9,29 @@ group-order: 3
 
 banner:
   title: The Panorama Route
-  intro: Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 
 
 
 roadtrip:
+
   title: Johannesburg to Durban
-  intro: >
-    <p class="text--lg">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
   meta:
     journey: Johannesburg to Durbin
     distance: 500 miles
     time: 2 days
+  intro: >
+    <p class="text--lg">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
   waypoints:
 
-    - title: Johannesburg
-      id: johannesburg
+    - title: Place
+      id: place
+      drive-distance: 30 miles drive
+      highlights:
+        - title: Highlight
+        - title: Highlight
+        - title: Highlight
       content: >
-        <p class="text--lg">Begin your adventure in Jo’burg. This vibrant city has gone from strength-to-strength in recent years, reinventing itself into a cultural mecca for hip South Africans and savvy travellers. Maboneng is a shining example, a bastion of urban renewal that offers cool galleries promoting local artists, street food halls packed with local artisans, and the kind of atmosphere that is utterly addictive.</p>
-        <p class="text--lg">Liliesleaf Farm, Constitution Hill and the Apartheid Museum are exceptional archives of the Freedom Struggle in Johannesburg. Head to the Soweto township to see Mandela’s house, before soaking up the joyful atmosphere and unmissable eats of Soweto’s excellent restaurants. Discover live jazz and kota, endeared by the warm welcome you’ll receive in this celebrated community. </p>
-        <p class="text--lg">If you can bring yourself to leave this enigmatic metropolis, now is the time to hit the road. The real South Africa is calling…</p>
-
-    - title: Isandlwana & Rorke’s Drift
-      id: isandlwana
-      content: >
-        <p class="text--lg">Ever seen Zulu? The 1964 epic is probably the most familiar reference to this area’s pivotal historic past. It does, however, neglect to paint the full picture of that fateful day. The start of the Anglo-Zulu War began with the Battle of Isandlwana, a decisive victory for the Zulu due to a series of blunders and underestimation of the Zulu by the British. In a bid for aggressive colonisation, the British suffered their worst defeat at the hands of native Africans. Following the battle, a 4,000 strong band of Zulu, against the orders of their own king, decided to hunt the remaining forces to Rorke’s Drift. A bloody standoff ensued, with around 150 defending the garrison against a vast Zulu attack – a heroic battle that the British, against all the odds, managed to win.</p>
-        <p class="text--lg">It was, of course, a lucky diversion for Britain, offering at least some propaganda following the disaster at Isandlwana. The battles were excuse enough to launch a proper invasion into the region, marking the beginning of the end of the Zulu Kingdom as it then stood.</p>
-        <p class="text--lg">Now, you’ll find the plain of Isandlwana interrupted by small piles of white rocks, marking the graves of fallen British and Commonwealth soldiers. It’s a soul-stirring scene, made ever more poignant by the excellent local guides that will talk you through the events of that day, interspersed with first-hand accounts set to memory.</p>
-        <p class="text--lg">Around 15km from that battlefield lies Rorke’s Drift. Outlined in the ground are the final stands the British made against the Zulu, offering a rather chilling context to the rather peaceful surroundings. Now, you can take guided horseback tours of of the surrounding bush, which will teach the history of this area whilst also providing a strange antithesis by showing the beauty of the landscape.</p>
-
-    - title: Hluhluwe
-      id: hluhluwe
-      content: >
-        <p class="text--lg">This charming village nestles itself between the iSimangaliso Wetland Park and Hluhluwe–iMfolozi Park, a perfect gatekeeper for both. The surrounding region is a true outdoor lover’s paradise and rather less-travelled than South Africa’s more famous safari routes. </p>
-        <p class="text--lg">The game reserves that surround Hluhluwe are serious rivals to the better-known reserves like those in Kruger. Lesser-known means less busy, which in-itself could suggest a more intimate glimpse at South Africa’s fascinating wildlife. It’s also home to the oldest game reserve in the country, plus the setting for the first rhino preservation effort to stave off extinction. You can catch the Big Five here, with stays in glorious lodges perfect for getting to the heart of the action. Our team stayed in the Phinda Reserve, which has exclusive access to off-trail adventures – not typical of other reserves where safaris must stick to the trails.</p>
-        <p class="text--lg">Just south of the village lies the DumaZulu Traditional Village, a place to immerse yourself in the Zulu culture of the KwaZulu-Natal region. You’ll be treated to a traditional Zulu village experience, with dance displays and other immersive experiences that help to teach the heritage of the indigenous people in this part of South Africa. Taste Zulu beer and hear Zulu drums, learning about the culture of this fascinating people. </p>
-        <p class="text--lg">North and east of Hluhluwe sots the long stretch of iSimangaliso Wetland. Your next stop makes a great stop for exploring this unique landscape...</p>
-
-    - title: St Lucia
-      id: st-lucia
-      content: >
-        <p class="text--lg">Here, in the heart of the wetlands estuary, St Lucia is a true gem. From here, you can explore the unique topography of the surrounding area, with the warm Indian Ocean on one side and the vast, eponymous lake stretching far into the north. The highest concentration of hippos and crocodiles reside in the outlying wetlands, which also teems with a host of other remarkable wildlife. Take a boat or a self-drive tour of the area, or stick close to the ocean and spot the dolphins and whales which play in the warm waters from mid-June to November. </p>
-        <p class="text--lg">Horse safaris and walks along the iGwalagwala Trail add to the myriad of ways to explore this fascinating area. Take a kayak to the water, spot the birdlife that sails across the wetlands, or head to Cape Vidal for great snorkelling opportunities at low tide. The beaches are veritable idylls, pulling the crowds in the summer. Yet for all its popularity, the area around St Lucia remains an unspoilt paradise for those that love untouched outdoor scenes.</p>
-
-    - title: Nelson Mandela Capture Site
-      id: nelson-mandela
-      content: >
-        <p class="text--lg">West of Durban lie the Midlands. Follow the R103 out of the city and discover the very spot where Nelson Mandela was captured by armed apartheid police, after 17 months on the run. This pivotal moment in the freedom struggle marked the beginning of Mandela’s lengthy imprisonment. The spot is recognized by a remarkable sculpture that signifies both Mandela’s disappearance and his return to the world.  </p>
-
-    - title: Durban
-      id: durban
-      content: >
-        <p class="text--lg">South Africa’s third-largest city is a hotbed of cultural diversity, with a vast Indian population that has shaped a unique identity along this glorious coastline. Often overlooked for the safaris and wine regions, Durban offers an authentic slice of South African life. It’s here that the markets buzz with activity, that foodie delights are abundant, that music and culture take centre stage. </p>
-        <p class="text--lg">Discover the Golden Mile, Durban’s famous stretch of beach that has become something of a mecca for surfers the world over. The waters are far warmer than those in Cape Town, making the city a true beach destination. In the city, discover the technicolour spice markets, where a myriad of colourful pyramids – with equally colourful names (Mother-in-Law Hellfire anyone?) – add a thick aroma to the buzzing place. Try the famous Durban curries and bunny chow, or discover a healthy street-food scene that builds on Durban’s diverse culinary offerings. Indie designers create cool Durban designs in a host of boutiques, art remains a DIY operation with galleries springing up frequently, and local crafts and culture are displayed in packed markets. </p>
-        <p class="text--lg">Durban remains a spellbinding city to finish your road trip – just be sure to leave enough time to soak up all it has to offer.</p>
+        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
 
 
 
