--- a/_pages/roadtrip/garden-route/index.html
+++ b/_pages/roadtrip/garden-route/index.html
@@ -31,7 +31,8 @@ roadtrip:
         - title: Highlight
         - title: Highlight
       content: >
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>Start your adventure in mesmerizing Cape Town, a colourful city that is a true hub of creativity and style in South Africa. From the technicolour Bo-Kaap suburb to the design-forward, artsy neighbourhoods of East City and Woodstock, explore a diverse city shadowed by the enigmatic Table Mountain. The dining options are numerous, representing the many faces of the people that call the city home. Before dinner calls, however, you can try your hand at surfing, or hike the mountains for unforgettable views over the city, set to work up a healthy appetite before sinking into a trendy eatery in the buzzing streets of Woodstock.</p>
+        <p>Cape Town is utterly captivating, but the wider region beckons. A stone’s throw from the buzzing downtown of the city lies an irresistible landscape known as Cape Winelands… It’s time to hit the road!</p>
 
     - title: Winelands
       id: winelands
@@ -41,7 +42,7 @@ roadtrip:
         - title: Highlight
         - title: Highlight
       content: >
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>Discover some of the most famous vintners in the world. The road north out of Cape Town takes you into the heart of Cape Winelands, where the mountainous landscape offers a remarkable microclimate perfect for grapes. Rolling vineyards grace this pretty region, with historic towns offering exceptional dining, luxurious stays and, ofcourse, superb wines. The most famous are Dutch-founded Stellenbosch and French-Huguenot-founded Franschhoek. These origins give clue to each town’s historic charms, both offering quaint, colonial settings that paint a glorious scene for enjoying fine tipples. Paarl, Tulbagh and Robertson also make excellent stops along the way, where superb dining options compliment cellar-door tastings. An iconic outing from Cape Town, the Winelands are a perfect springboard for exploring the coast further north.</p>
 
     - title: Mossel Bay
       id: mossel-bay
@@ -51,7 +52,7 @@ roadtrip:
         - title: Highlight
         - title: Highlight
       content: >
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>With the Cape Fold Mountains as your guide, head to the start of the famed Garden Route, with a stop at the gorgeous seaside town, Mossel Bay. It was the site of the first European landings in South Africa, a history told in the local museum. With the second mildest climate in the world, the long stretches of white sand beaches make for a replenishing stop. Plenty of hair-raising activities like skydiving are available locally, but if you want to take it easy, check out the market at Hartenbos Beach or set sail to nearby seal island – which, as the name suggests, is packed full of seals! Mossel Bay is a laidback port town that makes for a great stop before setting off to explore the picturesque Garden Route.</p>
 
     - title: Wilderness
       id: wilderness
@@ -61,7 +62,7 @@ roadtrip:
         - title: Highlight
         - title: Highlight
       content: >
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>Surfers around the world head for Victoria’s Bay just outside of Wilderness, where a national competition is held annually. Along the irresistible stretch of coastline, the town of Wilderness is another coastal idyll that offers an array of activities and things to do – if you can tear yourself away from the stunning roads that take you there. Nestled amongst a lagoon, the ocean, and a collection of rivers, spot wildlife and try activities like hiking, hangliding, kayaking and more.  Ride a horse through the glorious forests that fringe the town, or head out to Dolphin’s Point to try your luck at spotting the dolphins and whales that bask in the shores below.</p>
 
     - title: Plettenberg safari
       id: plettenberg-safari
@@ -71,7 +72,7 @@ roadtrip:
         - title: Highlight
         - title: Highlight
       content: >
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>Head out on an adventure with a safari in Plettenberg Bay Game Reserve. From jeep safaris to horseback rides, you’ll have a chance at spotting the famous Big Five, a bucket-list sight for most travellers to this glorious country. In certain reserves and parks you could also try a self-drive safari, or rely on the excellent guides at the game reserve for better chances of sighting the beautiful wildlife that calls the area home. </p>
 
     - title: Nature’s Valley
       id: natures-valley
@@ -81,7 +82,8 @@ roadtrip:
         - title: Highlight
         - title: Highlight
       content: >
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>As the name suggests, this tiny hamlet lies relatively untouched by, well anything really. No big developments, no flashy shopping malls – just a small collection of homes that curve around a beautiful shoreline. It’s a perfect base from which to explore the wild landscape that surrounds the village. Discover the rainforests that offer sanctuary to a noisy collection of wildlife, best explored with canopy tours that zipline through the dense thicket.</p>
+        <p>For a truly adrenaline-fuelled afternoon, don’t miss the highest bungee jump in the world at Blourkran’s Bridge. Two of every 10 people turn back from the edge – testament to how daring this jump really is. </p>
 
     - title: Port Elizabeth
       id: port-elizabeth
@@ -91,7 +93,7 @@ roadtrip:
         - title: Highlight
         - title: Highlight
       content: >
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <p>The final chapter of the Garden Route, Port Elizabeth is blessed with year-round sunshine and a collection of enviable beaches. It’s the perfect spot to reflect on the magnificent roadtrip you’ve just completed, sinking into the sands of the shoreline or trying some of the town’s new and hip eateries. Spot sharks, whales and dolphins just off the coast, or discover the great live music scene that the town fosters. For one last hoorah, head to the cool bars as the sun sinks, and wind down with locals in this up-and-coming city.  </p>
 
 
 
